<resources  xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_robo_movement">ROBOBO! ROB</string>
    <string name="btnForward">Forwards</string>
    <string name="btnBackward">Backwards</string>
    <string name="btnTurnLeft">Turn Left</string>
    <string name="btnTurnRight">Turn Right</string>
    <string name="btnStop">STOP</string>
    <string name="sBtnAngVel">Vel.</string>
    <string name="sBtnAng">Ang.</string>
    <string name="lblTime">Time</string>
    <string name="lblAngVel">Ang. Vel.</string>
    <string name="lblAngle">Angle</string>
    <string name="swVelocity">Use Angle</string>
    <string name="lblGaps">Gaps</string>
    <string name="lblFalls">Falls</string>
    <string name="lblIRs">IRs</string>
    <string name="lblPanMotor">Pan</string>
    <string name="lblTiltMotor">Tilt</string>
    <string name="lblLeftMotor">Left</string>
    <string name="lblRightMotor">Right</string>
    <string name="lblPanBar">Pan</string>
    <string name="lblTiltBar">Tilt</string>
    <string name="lblStatusPeriod">Period</string>
    <string name="lblLastStatus">Last Status</string>
    <string name="lblBattery">Battery</string>
    <string name="btnResetPanTilt">Reset P/T</string>
    <string name="tglModeOn">SECURE</string>
    <string name="tglModeOff">UNSECURE</string>
    <string name="btnLed">IR LEDs</string>
    <string name="tglLedsOn">IR LEDs</string>
    <string name="tglLedsOff">IR LEDs</string>
    <string name="dialogWaitConnectionTitle">Connecting to Robobo Platform</string>
    <string name="dialogWaitConnectionMsg">Please wait...</string>
    <string name="txtBatteryCharging">charging</string>
    <string name="txtBatteryDischarging">discharging</string>
    <string name="tglRemoteControlModeOn">R/C ON</string>
    <string name="tglRemoteControlModeOff">R/C OFF</string>
</resources>
