<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mytechia.robobo.rob.app.RobMovementActivity"
    android:columnCount="3"
    android:rowCount="21">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblTime"
        android:id="@+id/lblTime"
        android:layout_row="1"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/skBarTime"
        android:layout_row="1"
        android:layout_column="1"
        android:indeterminate="false"
        android:max="10000"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblAngVel"
        android:id="@+id/lblAngVel"
        android:layout_row="0"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/skBarAngVel"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:indeterminate="false"
        android:max="127"
        android:layout_columnWeight="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblAngle"
        android:id="@+id/lblAngle"
        android:layout_row="2"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/skBarAngle"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:max="720"
        android:indeterminate="false" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:orientation="horizontal"
        android:layout_columnSpan="3"
        android:gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTime"
            android:id="@+id/radioTime"
            android:checked="true"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAngle"
            android:id="@+id/radioAngle"
            android:checked="false"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnForward"
        android:id="@+id/btnForward"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:minWidth="100dp"
        android:minHeight="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTurnLeft"
        android:id="@+id/btnTurnLeft"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|right"
        android:minWidth="100dp"
        android:minHeight="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStop"
        android:id="@+id/btnStop"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:minWidth="100dp"
        android:minHeight="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTurnRight"
        android:id="@+id/btnTurnRight"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_gravity="center_horizontal|left"
        android:minWidth="100dp"
        android:minHeight="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBackward"
        android:id="@+id/btnBarckward"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:minWidth="100dp"
        android:minHeight="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblPanBar"
        android:id="@+id/lblPanBar"
        android:layout_row="8"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/skBarPan"
        android:layout_row="8"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:indeterminate="false"
        android:max="180" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblTiltBar"
        android:id="@+id/lblTiltBar"
        android:layout_row="9"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/skBarTilt"
        android:layout_row="9"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:indeterminate="false"
        android:max="90" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0 0 0 0 0 0 0"
        android:id="@+id/txtGaps"
        android:layout_row="11"
        android:layout_column="1"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblGaps"
        android:id="@+id/lblGaps"
        android:layout_row="11"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblFalls"
        android:id="@+id/lblFalls"
        android:layout_row="12"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0 0 0 0 0 0 0"
        android:id="@+id/txtFalls"
        android:layout_row="12"
        android:layout_column="1"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblIRs"
        android:id="@+id/lblIRs"
        android:layout_row="13"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0 0 0 0 0 0 0 0 0"
        android:id="@+id/txtIRs"
        android:layout_row="13"
        android:layout_column="1"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblPanMotor"
        android:id="@+id/lblPanMotor"
        android:layout_row="14"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtPan"
        android:layout_row="14"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblTiltMotor"
        android:id="@+id/lblTiltMotor"
        android:layout_row="15"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtTilt"
        android:layout_row="15"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblLeftMotor"
        android:id="@+id/lblLeftMotor"
        android:layout_row="16"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtLeft"
        android:layout_row="16"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblRightMotor"
        android:id="@+id/lblRightMotor"
        android:layout_row="17"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtRight"
        android:layout_row="17"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblStatusPeriod"
        android:id="@+id/lblStatusPeriod"
        android:layout_row="18"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/skBarStatusPeriod"
        android:layout_row="18"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:max="5000"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblLastStatus"
        android:id="@+id/lblLastStatus"
        android:layout_row="20"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="--"
        android:id="@+id/txtLastStatus"
        android:layout_row="20"
        android:layout_column="1"
        android:layout_columnSpan="2" />

</GridLayout>
